--- a/content-org/blog/en/2011-02-03-3-tiny-javascript-snippets.org
+++ b/content-org/blog/en/2011-02-03-3-tiny-javascript-snippets.org
@@ -1,6 +1,7 @@
 #+title: 3 Tiny JavaScript Snippets
 #+datetime: 03 Feb 2011 11:55
 #+tags: javascript
+#+hugo_section: blog/en
 
 Currently I am doing some stuff in JavaScript and I need to have just a
 tiny amounts of code to work with. As tiny as this article. But there
