--- a/content-org/blog/ru/2007-08-12-16-useful-solutions-for-javascript.org
+++ b/content-org/blog/ru/2007-08-12-16-useful-solutions-for-javascript.org
@@ -1,6 +1,7 @@
 #+title: 16 полезных решений для Javascript
 #+datetime: 12 Aug 2007 17:55
 #+tags: javascript
+#+hugo_section: blog/ru
 
 Представляю вам набор функций, которые у меня лежат в отдельном файле
 =utils.js= - это функции, которые я использую чаще всего. Они стараются
@@ -45,6 +46,12 @@
 :PROPERTIES:
 :CUSTOM_ID: ооп
 :END:
+
+**** 1.
+:PROPERTIES:
+:CUSTOM_ID: sol-1
+:END:
+
 /1./ Первый блок -- набор из трех функций (две из которых пустые :) ),
 позволяющих применять (эмулировать?) все три принципа *ООП* в
 *JavaScript*. Из нескольких предложенных на
@@ -87,6 +94,11 @@ Class.extend = function(def) {
 [[../javascript-oop][следующую статью]] и проследую далее. Пару простых
 примеров вы можете наблюдать в пунктах /[[#sol-2][2]]/, /[[#sol-5][5]]/
 и /[[#sol-15][15]]/.
+
+**** 2.
+:PROPERTIES:
+:CUSTOM_ID: sol-2
+:END:
 
 /2./ Следующая функция -- простая, но изящная -- полезна в сочетании с
 предыдущим набором -- она *создает функцию-ссылку на метод*:
@@ -137,6 +149,12 @@ var elmScrollHandler = new ScrollHandler('SomeElmId');
 :PROPERTIES:
 :CUSTOM_ID: объектная-модель-js
 :END:
+
+**** 3.
+:PROPERTIES:
+:CUSTOM_ID: sol-3
+:END:
+
 /3./ Нижеприведенная функция *клонирует* любой *объект* вместе со всеми
 его свойствами:
 
@@ -157,6 +175,11 @@ function cloneObj(objToClone) {
 
 var clonedObj = cloneObj(objToClone);
 #+end_src
+
+**** 4.
+:PROPERTIES:
+:CUSTOM_ID: sol-4
+:END:
 
 /4./ *Конвертер объектов*, следующая функция, позволяет удобно
 использовать всяческие условные (и претендующие ими быть :) )
@@ -202,6 +225,11 @@ alert(isPersonAllowed("Phil","Marlo")); // false
 alert(isPersonAllowed("Jason","Harrison")); // true
 alert(isPersonAllowed("Martin","Luther")); // false
 #+end_src
+
+**** 5.
+:PROPERTIES:
+:CUSTOM_ID: sol-5
+:END:
 
 /5./ Функция, позволяющая создавать *хэш* сначала кажется немного
 излишней: объекты в JavaScript -- те же хеши, но вот иногда в качестве
@@ -254,6 +282,11 @@ var someGame = new Game();
 alert("You are in "+stateMap.items[someGame.getStage()]+" stage!");
 #+end_src
 
+**** 6.
+:PROPERTIES:
+:CUSTOM_ID: sol-6
+:END:
+
 /6./ Три других функции просто упрощают и/или делают очевиднее некоторые
 операции: =getTime= на 11 символов сокращает доступ к получению
 *текущего времени*, =getTimeDelta= позволяет найти *промежуток в
@@ -280,6 +313,12 @@ Number.prototype.NaN0=function() { return isNaN(this) ? 0 : this; }
 :PROPERTIES:
 :CUSTOM_ID: определение-браузера
 :END:
+
+**** 7.
+:PROPERTIES:
+:CUSTOM_ID: sol-7
+:END:
+
 /7./ Небольшой объект, поименованные по названиям браузеров свойства
 которого -- суть условия. Этим достигается более читабельное (но не
 настолько скурпулезное насколько могло бы быть) *определение большинства
@@ -325,6 +364,12 @@ var USER_DATA = {
 :PROPERTIES:
 :CUSTOM_ID: координаты-позиционирование
 :END:
+
+**** 8.
+:PROPERTIES:
+:CUSTOM_ID: sol-8
+:END:
+
 /8./ Набор функций, позволяющих получить *координаты элемента* на экране
 пользователя.
 
@@ -430,6 +475,11 @@ function findPos(e) {
 }
 #+end_src
 
+**** 9.
+:PROPERTIES:
+:CUSTOM_ID: sol-9
+:END:
+
 /9./ Определить текущие *координаты курсора* мыши и *смещение элемента
 относительно курсора* легко, если использовать соответствующие функции
 (собранные на
@@ -509,6 +559,11 @@ function onMouseMove(elm, ev) {
 определенном случае -- прошу сообщать -- хочется добиться максимальной
 их переносимости)
 
+**** 10.
+:PROPERTIES:
+:CUSTOM_ID: sol-10
+:END:
+
 /10./ Определение *высоты элемента* иногда более нелегкая задача чем
 определение других его параметров, но эти две функции придут на помощь:
 
@@ -534,6 +589,12 @@ function getOffsetHeight(e) {
 :PROPERTIES:
 :CUSTOM_ID: dom
 :END:
+
+**** 11.
+:PROPERTIES:
+:CUSTOM_ID: sol-11
+:END:
+
 /11./ Иногда нужно *пройти рекурсивно по дереву DOM*, начиная с
 некоторого элемента и выполняя некоторую функцию над каждым из потомков,
 забираясь в самую глубь. В DOM есть объект =TreeWalker=, но он не
@@ -605,6 +666,11 @@ setElmAttr(targetNode, "isTarget", true);
 средней ветвистости дереве - они могут пожрать немало ресурсов. или, по
 крайней мере, вызывайте их в фоне через =setTimeout=)
 
+**** 12.
+:PROPERTIES:
+:CUSTOM_ID: sol-12
+:END:
+
 /12./ *Удаление узлов* - иногда необходимая задача. Иногда нужно удалить
 сам узел, а иногда -- только его потомков. Функция
 =removeChildrenRecursively= рекурсивно удаляет всех потомков указанного
@@ -628,6 +694,11 @@ function removeElementById(nodeId) {
                             document.getElementById(nodeId));
 }
 #+end_src
+
+**** 13.
+:PROPERTIES:
+:CUSTOM_ID: sol-13
+:END:
 
 /13./ Казалось бы -- элементарная задача работы с атрибутами элемента --
 иногда наталкивает на абсолютно неожиданные проблемы: например, IE
@@ -690,6 +761,12 @@ function remElmAttr(elm, attrName, ns) {
 :PROPERTIES:
 :CUSTOM_ID: ajax
 :END:
+
+**** 14.
+:PROPERTIES:
+:CUSTOM_ID: sol-14
+:END:
+
 /14./ Если вам не нужно ничего большего, чем просто *выполнить
 асинхронный запрос* и на основе полученных данных сделать нечто -- для
 вас эта функция. Способ получения объекта =XMLHttpRequest= безусловно
@@ -789,6 +866,12 @@ function insertVideoSearchResults(divId) {
 :PROPERTIES:
 :CUSTOM_ID: логгинг
 :END:
+
+**** 15.
+:PROPERTIES:
+:CUSTOM_ID: sol-15
+:END:
+
 /15./ Представленная ниже функция для помощи в *ведении логов* очень
 проста, добавьте в нужное место в документе элемент
 =<div id="LOG_DIV"></div>=, задайте ему необходимую высоту, и в него
@@ -806,6 +889,11 @@ function LOG(informerName, text) {
     }
 }
 #+end_src
+
+**** 16.
+:PROPERTIES:
+:CUSTOM_ID: sol-16
+:END:
 
 /16./ В замечательном плагине [[http://www.getfirebug.com/][Firebug]]
 для браузера Firefox есть замечательная *консоль*, в которую с широкими
@@ -996,7 +1084,7 @@ function removeFromArray(arr, element) { // removes only one item!
 :END:
 Ну вот -- кажется, пока всё. Статья -- в состоянии готовности к
 исправлениям (если понадобятся :) ), можно переходить к следующим :). В
-[[#javascript-oop][следующей статье]] я намереваюсь рассказать
+[[../javascript-oop][следующей статье]] я намереваюсь рассказать
 поподробнее про ООП в JavaScript и привести в пример пару простых, но
 полезных классов. Надеюсь, эта статья вам помогла и хоть немного
 сократила имеющие потенциальную возможность быть потраченными на решение
