--- a/content-org/blog/ru/2010-12-06-fluxus-solar-system.org
+++ b/content-org/blog/ru/2010-12-06-fluxus-solar-system.org
@@ -1,6 +1,7 @@
 #+title: Моделируем солнечную систему в fluxus
 #+datetime: 6 Dec 2010 21:38
 #+tags: fluxus opengl scheme racket functional-programming
+#+hugo_section: blog/ru
 
 Я [[file:?post-about-fluxus][уже писал]] про
 [[http://www.pawfal.org/fluxus/][fluxus]], систему livecoding и, по
