--- a/content-org/blog/ru/2011-02-03-3-tiny-javascript-snippets.org
+++ b/content-org/blog/ru/2011-02-03-3-tiny-javascript-snippets.org
@@ -1,6 +1,7 @@
 #+title: 3 Маленьких JS-Сниппета
 #+datetime: 03 Feb 2011 11:55
 #+tags: javascript
+#+hugo_section: blog/ru
 
 В данный момент я делаю разные вещи на JavaScript и мне нужно, чтобы код
 с которым я работаю, был насколько возможно лёгок и прост. Лёгок и прост
