--- a/content-org/blog/ru/2011-07-27-gwt-mvp4g-layouts.org
+++ b/content-org/blog/ru/2011-07-27-gwt-mvp4g-layouts.org
@@ -1,6 +1,7 @@
 #+title: "GWT + mvp4g: видео доклада + отзыв о ADDConf'11 + пример с портлетами"
 #+datetime: 27 Jul 2011 09:10
 #+tags: gwt mvp4g java
+#+hugo_section: blog/ru
 
 ***** Вступление
 :PROPERTIES:
@@ -22,8 +23,8 @@ MVP-кода и явно повышает его наглядность. По э
 на конференции [[http://addconf.ru][ADDConf]], видео которого
 представляю ниже.
 
-В статью я добавил, кроме прочего, [[#section-3][отзыв о конфренции]] и
-докладах которые я видел, а также [[#section-11][ссылки/описание
+В статью я добавил, кроме прочего, [[#отзыв][отзыв о конфренции]] и
+докладах которые я видел, а также [[#где-посмотреть][ссылки/описание
 работающего примера]] создания системы портлетов/порталов на GWT+mvp4g,
 я его упоминал в докладе.
 
