--- a/content-org/blog/ru/2011-08-16-html5-not-a-markup-language-but-a-mess.org
+++ b/content-org/blog/ru/2011-08-16-html5-not-a-markup-language-but-a-mess.org
@@ -1,6 +1,7 @@
 #+title: HTML5 — не язык разметки, а мессиво
 #+datetime: Tue 16 Aug 2011 20:05
 #+tags: html5
+#+hugo_section: blog/ru
 
 Позволю себе, первую в блоге, теоретическую статью. Если вы легко
 возбудимы, не обращайте на неё внимания. И более того, эта статья ---
