--- a/content-org/blog/ru/2011-11-16-monkey-patching-or-extending-native-types-religious-or-not.org
+++ b/content-org/blog/ru/2011-11-16-monkey-patching-or-extending-native-types-religious-or-not.org
@@ -1,6 +1,7 @@
 #+title: "Monkey-Patching или Расширение Встроенных Типов: религия или осознанный выбор?"
 #+datetime: 16 Nov 2011 11:55
 #+tags: javascript
+#+hugo_section: blog/ru
 
 Прошу прощения за «жёлтый» заголовок, но надо же как-то привлечь.
 
