--- a/content-org/blog/ru/_andropedros-pistoleros-rhinoceros.org
+++ b/content-org/blog/ru/_andropedros-pistoleros-rhinoceros.org
@@ -1,6 +1,7 @@
 #+title: Смесь андрода с носорогом
 #+datetime:
 #+tags: android rhino javascript
+#+hugo_section: blog/drafts
 
 Давно не писал коротеньких статей, да и такие обычно сразу пролистывают
 до блоков с картинками и кодом, так что особо распинаться не буду.
