--- a/content-org/blog/en/2006-05-15-jsp-custom-tags.org
+++ b/content-org/blog/en/2006-05-15-jsp-custom-tags.org
@@ -1,6 +1,7 @@
 #+title: JSP Custom Tags
 #+datetime: <2006-15-05 19:06>
 #+tags: java jsp
+#+hugo_section: blog/en
 
 Let the first post will be about custom-tags for
 [[http://java.sun.com/products/jsp/][JSP]], for example (and Java Server
