--- a/content-org/blog/en/2007-07-22-eric-ide-ubuntu.org
+++ b/content-org/blog/en/2007-07-22-eric-ide-ubuntu.org
@@ -1,6 +1,7 @@
 #+title: Eric IDE 4.0.1 in Ubuntu 7.04
 #+datetime: 22 Jul 2007 18:05
 #+tags: eric-ide python ubuntu
+#+hugo_section: blog/en
 
 [[http://www.die-offenbachs.de/eric/index.html][Eric]] -- is very good
 IDE for [[http://www.python.org/][Python]]. And
