--- a/content-org/blog/en/2007-08-12-16-useful-solutions-for-javascript.org
+++ b/content-org/blog/en/2007-08-12-16-useful-solutions-for-javascript.org
@@ -1,6 +1,7 @@
 #+title: 16 Practical Solutions for Javascript
 #+datetime: 12 Aug 2007 17:55
 #+tags: javascript
+#+hugo_section: blog/en
 
 Let me present you a set of functions that I keep in separate =utils.js=
 file - they are the most frequent functions I used. They do trying very
@@ -44,6 +45,12 @@ removed)
 :PROPERTIES:
 :CUSTOM_ID: oop
 :END:
+
+**** 1.
+:PROPERTIES:
+:CUSTOM_ID: sol-1
+:END:
+
 /1./ First block -- is a set of three functions (two of them are empty
 ones :) ), providing a possibility to use (emulate?) all of three *OOP*
 principles in *JavaScript*. I've chosen this variant from some of
@@ -87,6 +94,11 @@ The complete examples of usage are too huge for this article, so I'll
 pass them to [[../javascript-oop][the next article]], and now we'll
 proceed further. You may notice two simple examples in the points
 /[[#sol-2][2]]/, /[[#sol-5][5]]/ and /[[#sol-15][15]]/.
+
+**** 2.
+:PROPERTIES:
+:CUSTOM_ID: sol-2
+:END:
 
 /2./ Next function -- a simple but elegant one -- is useful in
 combination with previous set -- it *creates a function reference for
@@ -139,6 +151,12 @@ in this case.
 :PROPERTIES:
 :CUSTOM_ID: js-object-model
 :END:
+
+**** 3.
+:PROPERTIES:
+:CUSTOM_ID: sol-3
+:END:
+
 /3./ The following function *clones* any *object* including all of its
 properties:
 
@@ -159,6 +177,11 @@ The usage is enormously simple:
 
 var clonedObj = cloneObj(objToClone);
 #+end_src
+
+**** 4.
+:PROPERTIES:
+:CUSTOM_ID: sol-4
+:END:
 
 /4./ *Objects converter*. Next function provides an elegant way to make
 a conditional constructs like
@@ -203,6 +226,11 @@ alert(isPersonAllowed("Phil","Marlo")); // false
 alert(isPersonAllowed("Jason","Harrison")); // true
 alert(isPersonAllowed("Martin","Luther")); // false
 #+end_src
+
+**** 5.
+:PROPERTIES:
+:CUSTOM_ID: sol-5
+:END:
 
 /5./ A function that allows to create *hash* seems to be a little bit
 overhead at first sight: JavaScript objects act almost like hashes, but
@@ -256,6 +284,11 @@ var someGame = new Game();
 alert("You are in "+stateMap.items[someGame.getStage()]+" stage!");
 #+end_src
 
+**** 6.
+:PROPERTIES:
+:CUSTOM_ID: sol-6
+:END:
+
 /6./ Three other functions just make some operations easier/lighter:
 =getTime= shortens the access to *current time* in 11 symbols,
 =getTimeDelta= lets you to find the *time difference in milliseconds*
@@ -282,6 +315,12 @@ Number.prototype.NaN0=function() { return isNaN(this) ? 0 : this; }
 :PROPERTIES:
 :CUSTOM_ID: browser-detection
 :END:
+
+**** 7.
+:PROPERTIES:
+:CUSTOM_ID: sol-7
+:END:
+
 /7./ A small object, the named properties of it -- are conditions. This
 is how the readability of *most types of browsers detection* is achieved
 here. This object was borrowed by me from the project I've participated
@@ -324,6 +363,12 @@ var USER_DATA = {
 :PROPERTIES:
 :CUSTOM_ID: coordinates-positioning
 :END:
+
+**** 8.
+:PROPERTIES:
+:CUSTOM_ID: sol-8
+:END:
+
 /8./ The set of functions that allow to get *element coordinates* on the
 user screen.
 
@@ -427,6 +472,11 @@ function findPos(e) {
 }
 #+end_src
 
+**** 9.
+:PROPERTIES:
+:CUSTOM_ID: sol-9
+:END:
+
 /9./ Getting current *mouse pointer coordinates* is relatively easy, if
 you use the according function (constructed on the base
 [[http://xhtml.ru/2007/03/10/advanced-thumbnail-creator/][of]]
@@ -503,6 +553,11 @@ function onMouseMove(elm, ev) {
 *NB!* (if this functions (/suddenly/ :) ) will not work in some case --
 please report -- I want to achieve the maximum of portability)
 
+**** 10.
+:PROPERTIES:
+:CUSTOM_ID: sol-10
+:END:
+
 /10./ Evaluating *the height of element* is a hard task in several
 cases, harder then getting its other parameters, but this two functions
 will help:
@@ -529,6 +584,12 @@ function getOffsetHeight(e) {
 :PROPERTIES:
 :CUSTOM_ID: dom
 :END:
+
+**** 11.
+:PROPERTIES:
+:CUSTOM_ID: sol-11
+:END:
+
 /11./ Sometimes you need *to walk the DOM tree recursively*, starting
 from some element and performing some function with each child, getting
 to the deepest deeps. There is =TreeWalker= object in DOM, but it fails
@@ -599,6 +660,11 @@ calls of them (more than one time in a second) even on the easy tree -
 they can eat a lot of resources. Or at least call them in background
 using =setTimeout=)
 
+**** 12.
+:PROPERTIES:
+:CUSTOM_ID: sol-12
+:END:
+
 /12./ *Removing nodes* is sometimes the task you need to do. In one
 cases you need to remove the single node, in other -- only its children.
 =removeChildrenRecursively= function remove all the children of the
@@ -629,6 +695,11 @@ element width/height attributes, and Safari differs in access to
 attributes with namespaces. The following function are avoiding all the
 problems I've met, without severe damage for the execution speed (for
 sure, it is better to use the native functions in standard cases):
+
+**** 13.
+:PROPERTIES:
+:CUSTOM_ID: sol-13
+:END:
 
 #+begin_src javascript
 
@@ -679,6 +750,12 @@ function remElmAttr(elm, attrName, ns) {
 :PROPERTIES:
 :CUSTOM_ID: ajax
 :END:
+
+**** 14.
+:PROPERTIES:
+:CUSTOM_ID: sol-14
+:END:
+
 /14./ If you need nothing more but just *execute asynchronous call* and
 do something and on the basis of data obtained -- this function is for
 you. The way of getting =XMLHttpRequest= object can be replaced, of
@@ -778,6 +855,12 @@ function insertVideoSearchResults(divId) {
 :PROPERTIES:
 :CUSTOM_ID: logging
 :END:
+
+**** 15.
+:PROPERTIES:
+:CUSTOM_ID: sol-15
+:END:
+
 /15./ The function presented below is very simple and intended to help
 in *logging*. Just add somewhere in the document the
 =<div id="LOG_DIV"></div>= element, set the required height for it, and
@@ -795,6 +878,11 @@ function LOG(informerName, text) {
     }
 }
 #+end_src
+
+**** 16.
+:PROPERTIES:
+:CUSTOM_ID: sol-16
+:END:
 
 /16./ In the very cool [[http://www.getfirebug.com/][Firebug]] plugin
 for Firefox there is the very cool *console*, where you can
@@ -930,7 +1018,7 @@ temp=""+this;while(temp.length<fillNum)temp="0"+temp;return temp;}
 #+end_src
 
 Along with that, we can add the *sorting* functions to the
-[[#js-obj-model][second part]],...
+[[#js-object-model][second part]],...
 
 #+begin_src javascript
 
