--- a/content-org/blog/en/2008-03-15-vim-python-windows-compilation.org
+++ b/content-org/blog/en/2008-03-15-vim-python-windows-compilation.org
@@ -1,6 +1,7 @@
 #+title: "[g]Vim in Python mode : Recompilation in Windows"
 #+datetime: 15 Mar 2008 17:32
 #+tags: gvim python
+#+hugo_section: blog/en
 
 Vim editor is best known between the developers who work on Unix systems
 -- it's a =emacs= competitor, something to call IDE-in-a-terminal --
