--- a/content-org/blog/en/2009-10-13-sametimed-google-wave-client.org
+++ b/content-org/blog/en/2009-10-13-sametimed-google-wave-client.org
@@ -1,6 +1,7 @@
 #+title: Google Wave Client as Java Web Application
 #+datetime: 13 Oct 2009 07:09
 #+tags: google-wave java javascript ajax dwr
+#+hugo_section: blog/en
 
 Zdrawstwooyte.
 
