--- a/content-org/blog/en/2011-05-04-gwt-mvp4g-slides.org
+++ b/content-org/blog/en/2011-05-04-gwt-mvp4g-slides.org
@@ -1,6 +1,7 @@
 #+title: "GWT + mvp4g Lecture Slides"
 #+datetime: 4 May 2011 19:17
 #+tags: gwt mvp4g java
+#+hugo_section: blog/en
 
 April 29, I've presented a lecture on Web-development with
 [[http://code.google.com/intl/ru/webtoolkit/][GWT]] and
