--- a/content-org/blog/en/2013-02-16-mastering-functional-javascript-slides.org
+++ b/content-org/blog/en/2013-02-16-mastering-functional-javascript-slides.org
@@ -1,6 +1,7 @@
 #+title: "Mastering Functional JavaScript Lecture Slides"
 #+datetime: 16 Feb 2013 22:23
 #+tags: javascript functional-programming
+#+hugo_section: blog/en
 
 In JavaScript, like, say, in Python, functions are also objects. It
 gives developer the opportunity to write pure (or not so, since there
