--- a/content-org/blog/en/2017-04-07-modern-binary-reverse-engineering-with-node-js-for-elm.org
+++ b/content-org/blog/en/2017-04-07-modern-binary-reverse-engineering-with-node-js-for-elm.org
@@ -2,6 +2,7 @@
 #+datetime: 07 Apr 2017 14:32
 #+tags: elm functional-programming parsers javascript
 #+excerpt: Kind of a problem for the developers of these plugins, is the fact that for the moment Elm has no reflection (a way to get a type of an entity) and tends not to have it at all. By itself, having no reflection is rather a good thing, usually it complicates the language syntax and/or libraries a lot. But the detailed types information is needed to implement helpful things in editors—nice type hints, nice auto-completion etc...
+#+hugo_section: blog/en
 
 Seems I haven't posted anything for a while,
 [[http://shamansir.github.io/blog/][since Sep 2014]] to be
