--- a/content-org/blog/ru/2006-12-22-php-ajax-sack.org
+++ b/content-org/blog/ru/2006-12-22-php-ajax-sack.org
@@ -1,6 +1,7 @@
 #+title: PHP + AJAX = SACK
 #+datetime: 22 Dec 2006 12:27
 #+tags: php ajax sack javascript
+#+hugo_section: blog/ru
 
 Понадобилось тут... Но лень было писать свою фунцкцию, чтобы там в
 зависимости от браузера и бла-бла-бла (тем более, насколько я помню,
