--- a/content-org/blog/ru/2006-12-22-php-mysql-unicode.org
+++ b/content-org/blog/ru/2006-12-22-php-mysql-unicode.org
@@ -1,6 +1,7 @@
 #+title: PHP и UTF-8 (Unicode) - Неинтересная забава на полдня
 #+datetime: 22 Dec 2006 12:48
 #+tags: php unicode mysql
+#+hugo_section: blog/ru
 
 
 Это [[http://live.julik.nl/2005/03/unicode-php][не мой совет]] (я
