--- a/content-org/blog/ru/2007-01-24-sata-dma-ubuntu.org
+++ b/content-org/blog/ru/2007-01-24-sata-dma-ubuntu.org
@@ -1,6 +1,7 @@
 #+title: SATA, DMA и странности Ubuntu
 #+datetime: 24 Jan 2007 19:52
 #+tags: sata dma ubuntu
+#+hugo_section: blog/ru
 
 Сегодня ставили [[http://ubuntuguide.org/wiki/Ubuntu:Edgy][Ubuntu 6.06
 LTS]] на =SATA=-шный винт. Она, как ни странно, злобно свалилась.
