--- a/content-org/blog/ru/2007-09-25-ant-tomcat-redeploying.org
+++ b/content-org/blog/ru/2007-09-25-ant-tomcat-redeploying.org
@@ -1,6 +1,7 @@
 #+title: Редеплойинг приложения на Tomcat средствами Ant
 #+datetime: 15 Sep 2007 12:38
 #+tags: tomcat ant java
+#+hugo_section: blog/ru
 
 Процесс разработки нашего проекта обладает одним минусом, свойственным
 многим J2EE-проектам: при изменении кода проекта и пересборке его сервер
