--- a/content-org/blog/ru/2008-03-15-vim-python-windows-compilation.org
+++ b/content-org/blog/ru/2008-03-15-vim-python-windows-compilation.org
@@ -1,6 +1,7 @@
 #+title: "[g]Vim в режиме Python: Рекомпиляция в Windows"
 #+datetime: 15 Mar 2008 17:32
 #+tags: gvim python
+#+hugo_section: blog/ru
 
 *** Введение
 :PROPERTIES:
