--- a/content-org/blog/ru/2009-09-18-client-xml-xslt-xhtml-browsers.org
+++ b/content-org/blog/ru/2009-09-18-client-xml-xslt-xhtml-browsers.org
@@ -1,6 +1,7 @@
 #+title: На клиенте! Получить XML! Получить XSL! Сделать XHTML! Марш!
 #+datetime: 18 Sep 2009 11:41
 #+tags: xml xslt javascript
+#+hugo_section: blog/ru
 
 *(X-Task: "On your Client! Get XML! Get XSL! Do XHTML! Go!")*
 
