--- a/content-org/blog/ru/2011-04-21-about-future-gwt-mvp4g-lecture.org
+++ b/content-org/blog/ru/2011-04-21-about-future-gwt-mvp4g-lecture.org
@@ -1,6 +1,7 @@
 #+title: Лекция по GWT+mvp4g на ADDConf '11
 #+datetime: 21 Apr 2011 11:46
 #+tags: gwt mvp4g java
+#+hugo_section: blog/ru
 
 Буду читать мастер-класс на [[http://addconf.ru/][ADDConf 2011]] по
 разработке веб-приложений с помощью
