--- a/content-org/blog/ru/2010-02-20-latex-study-works.org
+++ b/content-org/blog/ru/2010-02-20-latex-study-works.org
@@ -1,5 +1,5 @@
 #+title: Подготовка учебных документов в LaTeX
-#+datetime: 20 Feb 2010 23:54
+#+publishDate: 20 Feb 2010 23:54
 #+tags: latex gnumeric pgfplots
 #+hugo_section: blog-ru
 
