add author to sources, fix LaTeX article

--- a/content-org/blog/en/2006-12-22-php-ajax-sack.org
+++ b/content-org/blog/en/2006-12-22-php-ajax-sack.org
@@ -2,6 +2,7 @@
 #+publishDate: <2006-22-12T12:27>
 #+tags: php ajax sack javascript
 #+hugo_section: blog-en
+#+author: Anton Kotenko
 
 Occasionally, I've got a task to... But I was too lazy to write my own
 function, to check the browser and blah-blah-blah (the more, as I
