--- a/content-org/blog/en/2010-12-06-fluxus-solar-system.org
+++ b/content-org/blog/en/2010-12-06-fluxus-solar-system.org
@@ -2,6 +2,7 @@
 #+publishDate: <2010-12-6T21:38>
 #+tags: fluxus opengl scheme racket functional-programming
 #+hugo_section: blog-en
+#+author: Anton Kotenko
 
 Some time ago I [fn:post-about-fluxus: wrote a post] about
 [[http://www.pawfal.org/fluxus/][fluxus]], livecoding and 3D-prototyping
