--- a/content-org/blog/ru/2008-03-17-trac-subversion-ubuntu-revisited.org
+++ b/content-org/blog/ru/2008-03-17-trac-subversion-ubuntu-revisited.org
@@ -2,6 +2,7 @@
 #+publishDate: <2008-03-17T03:12>
 #+tags: trac subversion ubuntu
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 *** Задача
 :PROPERTIES:
