--- a/content-org/blog/ru/2008-05-25-java-and-json.org
+++ b/content-org/blog/ru/2008-05-25-java-and-json.org
@@ -2,6 +2,7 @@
 #+publishDate: <2008-05-25T00:00>
 #+tags: java json javascript
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 *** Введение
 :PROPERTIES:
