--- a/content-org/blog/ru/2009-09-18-client-xml-xslt-xhtml-browsers.org
+++ b/content-org/blog/ru/2009-09-18-client-xml-xslt-xhtml-browsers.org
@@ -2,6 +2,7 @@
 #+publishDate: <2009-09-18T11:41>
 #+tags: xml xslt javascript
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 *(X-Task: "On your Client! Get XML! Get XSL! Do XHTML! Go!")*
 
