--- a/content-org/blog/ru/2010-04-06-recovering-psi-password-python.org
+++ b/content-org/blog/ru/2010-04-06-recovering-psi-password-python.org
@@ -2,6 +2,7 @@
 #+publishDate: <2010-04-06T02:14>
 #+tags: psi python
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 Часто требуется восстановить пароль от аккаунта в клиенте Psi. Для этого
 можно использовать любой язык программирования, см.
