--- a/content-org/blog/ru/2010-04-08-ant-junit-one-liner-output-formatter.org
+++ b/content-org/blog/ru/2010-04-08-ant-junit-one-liner-output-formatter.org
@@ -2,6 +2,7 @@
 #+publishDate: <2010-04-08T19:32>
 #+tags: ant java junit
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 При прогоне JUnit-тестов по таску из ant, в консоль выводится очень
 много не особо нужной, на мой взгляд, информации. Особенно любят
