--- a/content-org/blog/ru/2010-06-15-deferred-calls-in-gwt-no-rpc.org
+++ b/content-org/blog/ru/2010-06-15-deferred-calls-in-gwt-no-rpc.org
@@ -2,6 +2,7 @@
 #+publishDate: <2010-06-15T09:32>
 #+tags: gwt java json
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 *Deferred* - /зд./ термин, который применяется для описания *вложенных
 асинхронных вызовов*, см. например
