--- a/content-org/blog/ru/2010-11-17-easy-as-sandwich-blog-engine.org
+++ b/content-org/blog/ru/2010-11-17-easy-as-sandwich-blog-engine.org
@@ -2,6 +2,7 @@
 #+publishDate: <2010-11-17T22:06>
 #+tags: javascript xml
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 Предположим, вам внезапно понадобился личный блог. У вас есть какой-то
 хилый бесплатный хостинг, и потому что он хилый на нём нет ни PHP, ни
