--- a/content-org/blog/ru/2010-11-21-may-be-a-validator-pattern.org
+++ b/content-org/blog/ru/2010-11-21-may-be-a-validator-pattern.org
@@ -2,6 +2,7 @@
 #+publishDate: <2010-11-23T00:03>
 #+tags: java
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 Достаточно часто в пользовательском интерфейсе нужно отображать,
 подходящие данные ввёл пользователь или нет. В зависимости от ситуации
