--- a/content-org/blog/ru/2011-02-03-3-tiny-javascript-snippets.org
+++ b/content-org/blog/ru/2011-02-03-3-tiny-javascript-snippets.org
@@ -2,6 +2,7 @@
 #+publishDate: <2011-02-03T11:55>
 #+tags: javascript
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 В данный момент я делаю разные вещи на JavaScript и мне нужно, чтобы код
 с которым я работаю, был насколько возможно лёгок и прост. Лёгок и прост
