--- a/content-org/blog/ru/2011-02-11-android-renderscript-example-translation.org
+++ b/content-org/blog/ru/2011-02-11-android-renderscript-example-translation.org
@@ -2,6 +2,7 @@
 #+publishDate: <2011-02-11T10:26>
 #+tags: android renderscript
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 *Примечание*: Это не авторская статья, но мой вольный перевод
 [[http://www.inter-fuser.com/2009/11/android-renderscript-more-info-and.html][статьи
