--- a/content-org/blog/ru/2011-08-16-html5-not-a-markup-language-but-a-mess.org
+++ b/content-org/blog/ru/2011-08-16-html5-not-a-markup-language-but-a-mess.org
@@ -2,6 +2,7 @@
 #+publishDate: <2011-08-16T20:05>
 #+tags: html5
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 Позволю себе, первую в блоге, теоретическую статью. Если вы легко
 возбудимы, не обращайте на неё внимания. И более того, эта статья ---
