--- a/content-org/blog/ru/2011-11-16-monkey-patching-or-extending-native-types-religious-or-not.org
+++ b/content-org/blog/ru/2011-11-16-monkey-patching-or-extending-native-types-religious-or-not.org
@@ -2,6 +2,7 @@
 #+publishDate: <2011-11-16T11:55>
 #+tags: javascript
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 Прошу прощения за «жёлтый» заголовок, но надо же как-то привлечь.
 
