--- a/content-org/blog/ru/2018-02-11-category-theory-senseless-and-merciless.org
+++ b/content-org/blog/ru/2018-02-11-category-theory-senseless-and-merciless.org
@@ -3,6 +3,7 @@
 #+tags: javascript functional-programming parsers
 #+slug: category-theory-pointless-and-merciless
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 * Теория категорий --- бессмысленная и беспощадная!
 :PROPERTIES:
