--- a/content-org/blog/en/2006-05-15-jsp-custom-tags.org
+++ b/content-org/blog/en/2006-05-15-jsp-custom-tags.org
@@ -2,6 +2,7 @@
 #+publishDate: <2006-15-05T19:06>
 #+tags: java jsp
 #+hugo_section: blog-en
+#+author: Anton Kotenko
 
 Let the first post will be about custom-tags for
 [[http://java.sun.com/products/jsp/][JSP]], for example (and Java Server
