--- a/content-org/blog/en/2007-01-24-sata-dma-ubuntu.org
+++ b/content-org/blog/en/2007-01-24-sata-dma-ubuntu.org
@@ -2,6 +2,7 @@
 #+publishDate: <2007-24-01T19:52>
 #+tags: sata dma ubuntu
 #+hugo_section: blog-en
+#+author: Anton Kotenko
 
 Today we've made an installation of
 [[http://ubuntuguide.org/wiki/Ubuntu:Edgy][Ubuntu 6.06 LTS]] to =SATA=
