--- a/content-org/blog/en/2007-08-19-javascript-oop.org
+++ b/content-org/blog/en/2007-08-19-javascript-oop.org
@@ -2,6 +2,7 @@
 #+publishDate: <2007-08-19T02:29>
 #+tags: javascript
 #+hugo_section: blog-en
+#+author: Anton Kotenko
 
 In [[../16-useful-solutions-for-javascript][previous article]] I have
 presented you a small example of code, which allows you to use the three
