--- a/content-org/blog/en/2008-03-15-vim-python-windows-compilation.org
+++ b/content-org/blog/en/2008-03-15-vim-python-windows-compilation.org
@@ -2,6 +2,7 @@
 #+publishDate: <2008-03-15T17:32>
 #+tags: gvim python
 #+hugo_section: blog-en
+#+author: Anton Kotenko
 
 Vim editor is best known between the developers who work on Unix systems
 -- it's a =emacs= competitor, something to call IDE-in-a-terminal --
