--- a/content-org/blog/en/2010-04-08-ant-junit-one-liner-output-formatter.org
+++ b/content-org/blog/en/2010-04-08-ant-junit-one-liner-output-formatter.org
@@ -2,6 +2,7 @@
 #+publishDate: <2010-04-08T19:32>
 #+tags: ant java junit
 #+hugo_section: blog-en
+#+author: Anton Kotenko
 
 I've seached for nice Apache Ant formatter which do not writes full
 stack trace in console/file and just writes what methods are passed,
