--- a/content-org/blog/en/2010-08-12-nijiato-detection-of-fingers-motion-algorithm.org
+++ b/content-org/blog/en/2010-08-12-nijiato-detection-of-fingers-motion-algorithm.org
@@ -2,6 +2,7 @@
 #+publishDate: <2010-08-12T15:38>
 #+tags: lisp computer-vision functional-programming
 #+hugo_section: blog-en
+#+author: Anton Kotenko
 
 I am crazy a little bit, so in my spare time I've started to study Lisp
 and, to make my studying more interesting, I've tried to make a
