--- a/content-org/blog/en/2010-11-17-easy-as-sandwich-blog-engine.org
+++ b/content-org/blog/en/2010-11-17-easy-as-sandwich-blog-engine.org
@@ -2,6 +2,7 @@
 #+publishDate: <2010-11-17T22:06>
 #+tags: javascript xml
 #+hugo_section: blog-en
+#+author: Anton Kotenko
 
 
 Say you suddenly needed a personal blog. I already have some puny free
