--- a/content-org/blog/en/2011-02-03-3-tiny-javascript-snippets.org
+++ b/content-org/blog/en/2011-02-03-3-tiny-javascript-snippets.org
@@ -2,6 +2,7 @@
 #+publishDate: <2011-12-03T11:55>
 #+tags: javascript
 #+hugo_section: blog-en
+#+author: Anton Kotenko
 
 Currently I am doing some stuff in JavaScript and I need to have just a
 tiny amounts of code to work with. As tiny as this article. But there
