--- a/content-org/blog/en/2011-02-15-limejs-writing-a-game.org
+++ b/content-org/blog/en/2011-02-15-limejs-writing-a-game.org
@@ -2,6 +2,7 @@
 #+publishDate: <2011-02-15T22:10>
 #+tags: html5 javascript limejs
 #+hugo_section: blog-en
+#+author: Anton Kotenko
 
 [[http://www.limejs.com][LimeJS]] is 2D Open Source HTML5-engine for
 game development with touch-events support and it works (following to
