--- a/content-org/blog/en/2013-02-16-mastering-functional-javascript-slides.org
+++ b/content-org/blog/en/2013-02-16-mastering-functional-javascript-slides.org
@@ -2,6 +2,7 @@
 #+publishDate: <2013-02-16T22:23>
 #+tags: javascript functional-programming
 #+hugo_section: blog-en
+#+author: Anton Kotenko
 
 In JavaScript, like, say, in Python, functions are also objects. It
 gives developer the opportunity to write pure (or not so, since there
