--- a/content-org/blog/ru/2006-05-15-jsp-custom-tags.org
+++ b/content-org/blog/ru/2006-05-15-jsp-custom-tags.org
@@ -2,6 +2,7 @@
 #+publishDate: <2006-05-15T19:06>
 #+tags: java jsp
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 Расскажу вам для затравки, например, о кастом-тэгах для
 [[http://java.sun.com/products/jsp/][JSP]] (а по принципу - и для
