--- a/content-org/blog/ru/2006-12-16-trac-subversion-ubuntu-initial.org
+++ b/content-org/blog/ru/2006-12-16-trac-subversion-ubuntu-initial.org
@@ -2,6 +2,7 @@
 #+publishDate: <2006-12-16T01:47>
 #+tags: trac subversion ubuntu
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 Приветствую всех заинтересованных. Ведь вас, наверняка, не очень много
 :).
