--- a/content-org/blog/ru/2006-12-22-php-ajax-sack.org
+++ b/content-org/blog/ru/2006-12-22-php-ajax-sack.org
@@ -2,6 +2,7 @@
 #+publishDate: <2006-12-22T12:27>
 #+tags: php ajax sack javascript
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 Понадобилось тут... Но лень было писать свою фунцкцию, чтобы там в
 зависимости от браузера и бла-бла-бла (тем более, насколько я помню,
