--- a/content-org/blog/ru/2006-12-22-php-mysql-unicode.org
+++ b/content-org/blog/ru/2006-12-22-php-mysql-unicode.org
@@ -2,6 +2,7 @@
 #+publishDate: <2006-12-22T12:48>
 #+tags: php unicode mysql
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 
 Это [[http://live.julik.nl/2005/03/unicode-php][не мой совет]] (я
