--- a/content-org/blog/ru/2007-08-12-16-useful-solutions-for-javascript.org
+++ b/content-org/blog/ru/2007-08-12-16-useful-solutions-for-javascript.org
@@ -2,6 +2,7 @@
 #+publishDate: <2007-08-12T17:55>
 #+tags: javascript
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 Представляю вам набор функций, которые у меня лежат в отдельном файле
 =utils.js= - это функции, которые я использую чаще всего. Они стараются
