--- a/content-org/blog/ru/2007-09-25-ant-tomcat-redeploying.org
+++ b/content-org/blog/ru/2007-09-25-ant-tomcat-redeploying.org
@@ -2,6 +2,7 @@
 #+publishDate: <2007-09-15T12:38>
 #+tags: tomcat ant java
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 Процесс разработки нашего проекта обладает одним минусом, свойственным
 многим J2EE-проектам: при изменении кода проекта и пересборке его сервер
