--- a/content-org/blog/ru/2010-07-10-post-about-fluxus.org
+++ b/content-org/blog/ru/2010-07-10-post-about-fluxus.org
@@ -2,6 +2,7 @@
 #+publishDate: <2010-07-10T13:10>
 #+tags: fluxus opengl scheme racket functional-programming
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 Интернет для программиста интересующегося трёхмерной графикой уже
 несколько лет полнится видео, в котором на лету программируют
