--- a/content-org/blog/ru/2011-01-02-ror-ide-gedit-link.org
+++ b/content-org/blog/ru/2011-01-02-ror-ide-gedit-link.org
@@ -2,6 +2,7 @@
 #+publishDate: <2011-01-02T21:44>
 #+tags: ruby gedit
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 [[http://www.jackyfox.com][JackyFox]] написал
 [[http://www.jackyfox.com/2010/12/27/ruby-on-rails-ide-iz-gedit-a/][статью
