--- a/content-org/blog/ru/2011-05-04-gwt-mvp4g-slides.org
+++ b/content-org/blog/ru/2011-05-04-gwt-mvp4g-slides.org
@@ -2,6 +2,7 @@
 #+publishDate: <2011-05-04T19:17>
 #+tags: gwt mvp4g java
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 
 29 апреля я читал мастер-класс по веб-разработке на
