--- a/content-org/blog/ru/2011-10-07-javascript-the-right-one-announce.org
+++ b/content-org/blog/ru/2011-10-07-javascript-the-right-one-announce.org
@@ -2,6 +2,7 @@
 #+publishDate: <2011-10-07T10:00>
 #+tags: javascript functional-programming
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 Буду делать доклад под названием «Правильный JavaScript»
 [[http://webstandardsdays.ru/2011/10/22/][22 Октября]] на
