--- a/content-org/blog/ru/2013-02-16-mastering-functional-javascript-slides.org
+++ b/content-org/blog/ru/2013-02-16-mastering-functional-javascript-slides.org
@@ -2,6 +2,7 @@
 #+publishDate: <2013-02-16T22:23>
 #+tags: javascript functional-programming
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 В языке JavaScript, как и, к примеру, в Python, функции являются
 объектами. Эта немаловажное обстоятельство позволяет программистам
