--- a/content-org/blog/ru/2013-11-07-the-first-human-readable-parser.org
+++ b/content-org/blog/ru/2013-11-07-the-first-human-readable-parser.org
@@ -2,6 +2,7 @@
 #+publishDate: <2013-11-07T08:14>
 #+tags: javascript functional-programming parsers
 #+hugo_section: blog-ru
+#+author: Антон Котенко
 
 Если ты меня вообще помнишь, читатель --- то, наверняка, помнишь и то,
 что мои посты в подавляющем количестве случаев разочарующе длинны и
